--- a/mclauncher/templates/index.html
+++ b/mclauncher/templates/index.html
@@ -51,15 +51,23 @@
             <span>Server is not running</span>
           </span>
         </p>
-        <div class="has-text-centered mt-4">
+
+        <div class="has-text-centered mt-5">
           <h3 class="is-size-3 has-text-grey">
             Players <span id="number-of-players"></span>
           </h3>
           <ul class="is-size-2" id="players"></ul>
         </div>
+
+        <div class="mt-6 has-text-centered">
+          <h3 class="is-size-3 has-text-grey">Server Administration</h3>
+          <button id="start-button" class="button is-info mt-4" disabled>
+            Start Server
+          </button>
+        </div>
       </div>
 
-      <div id="loading">
+      <div id="loading" class="mt-6">
         <p class="subtitle is-3 has-text-centered">Loading...</p>
         <progress class="progress is-info"></progress>
       </div>
@@ -124,14 +132,12 @@
         }
 
         const api = async (method, path) => {
-          document.getElementById("loading").style.display = "block";
           const response = await fetch(`/api/v1${path}`, {
             method,
             headers: {
               Authorization: `Bearer ${user.accessToken}`,
             },
           });
-          document.getElementById("loading").style.display = "none";
           return response;
         };
 
@@ -150,7 +156,7 @@
           document.getElementById("error").style.display = "block";
         };
 
-        const getServerStatus = async () => {
+        const getServerStatus = async (ignoreError = false) => {
           const response = await api("GET", "/server");
 
           if (response.ok) {
@@ -158,7 +164,9 @@
 
             if (body.running) {
               document.getElementById("server-running").style.display = "block";
+              document.getElementById("server-stopped").style.display = "none";
             } else {
+              document.getElementById("server-running").style.display = "none";
               document.getElementById("server-stopped").style.display = "block";
             }
 
@@ -175,14 +183,49 @@
             ).innerHTML = `(${body.players.length})`;
 
             document.getElementById("server").style.display = "block";
-            return !body.running;
+            return body.running ? "running" : "stopped";
           } else {
-            await handleErrorResponse("GET /api/v1/server", response);
-            return false;
+            if (!ignoreError) {
+              await handleErrorResponse("GET /api/v1/server", response);
+            }
+            return "error";
           }
         };
 
-        await getServerStatus();
+        document.getElementById("loading").style.display = "block";
+        const status = await getServerStatus();
+        document.getElementById("loading").style.display = "none";
+        if (status !== "stopped") {
+          // Server is already running or got any errors.
+          return;
+        }
+
+        const sleep = (ms) => new Promise((resolve) => setTimeout(resolve, ms));
+        const startServer = async () => {
+          const button = document.getElementById("start-button");
+          button.disabled = true;
+          button.onclick = null;
+          document.getElementById("loading").style.display = "block";
+          const response = await api("POST", "/server/start");
+
+          if (response.ok) {
+            while (true) {
+              const status = await getServerStatus(true);
+              if (status === "running") {
+                break;
+              }
+              await sleep(5000);
+            }
+
+            document.getElementById("loading").style.display = "none";
+          } else {
+            await handleErrorResponse("POST /api/v1/server/start", response);
+          }
+        };
+
+        const button = document.getElementById("start-button");
+        button.onclick = startServer;
+        button.disabled = false;
       })();
     </script>
   </body>
