--- a/mclauncher/templates/index.html
+++ b/mclauncher/templates/index.html
@@ -45,7 +45,7 @@
         >
           <span class="icon-text">
             <span class="icon">
-              <i class="fa fa-check-circle"></i>
+              <i class="fa fa-ban"></i>
             </span>
             &nbsp;
             <span>Server is not running</span>
